--- a/src/css/good.css
+++ b/src/css/good.css
@@ -42,13 +42,23 @@
   margin-top: 6px;
 }
 
-#pagenum {
+.page {
+  color: #888888;
+}
+.page input {
+  width: 37px;
+  height: 38px;
+  border: 1px solid #e2e2e2;
+  text-align: center;
+  color: #888888;
+}
+.page #pagenum {
   display: inline-block;
 }
-#pagenum a {
+.page #pagenum a {
   margin-right: 3px;
 }
-#pagenum .current {
+.page #pagenum .current {
   background: #009688;
   color: #fff;
 }
@@ -74,6 +84,14 @@
 }
 #activity .layui-input-block label i {
   margin-right: 3px;
+}
+
+.layui-table-cell .activeup {
+  border-bottom-color: #000;
+}
+
+.layui-table-cell .activedown {
+  border-top-color: #000;
 }
 
 /*# sourceMappingURL=good.css.map */
