--- a/src/sass/good.scss
+++ b/src/sass/good.scss
@@ -38,14 +38,24 @@
     margin-top:6px;
 }
 
-#pagenum{
-    display:inline-block;
-    a{
-        margin-right:3px;
+.page{
+    color:rgb(136, 136, 136);
+    input{
+        width:37px;
+        height: 38px;
+        border: 1px solid rgb(226, 226, 226);
+        text-align:center;
+        color:rgb(136, 136, 136);
     }
-    .current{
-        background: #009688;
-        color:#fff;
+    #pagenum{
+        display:inline-block;
+        a{
+            margin-right:3px;
+        }
+        .current{
+            background: #009688;
+            color:#fff;
+        }
     }
 }
 
@@ -72,4 +82,12 @@
             margin-right:3px;
         }
     }
+}
+
+.layui-table-cell .activeup{
+    border-bottom-color: #000;
+}
+
+.layui-table-cell .activedown{
+    border-top-color: #000;
 }
